objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Custom_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To override the standard discount matrix</inlineHelpText>
        <label>Custom Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Order_End_Date__c</fullName>
        <label>Order End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Start_Date__c</fullName>
        <label>Order Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <formula>PricebookEntry.UnitPrice - (PricebookEntry.UnitPrice * Discount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Minimum_Order_Duration_1_month</fullName>
        <active>false</active>
        <errorConditionFormula>(Order_End_Date__c - Order_Start_Date__c) &lt;= 28</errorConditionFormula>
        <errorMessage>Minimum Order Term must be 1 month</errorMessage>
    </validationRules>
</CustomObject>